Update kubernetes-agent: improvements to agents, remediation tools, and configuration